# Django-RESTful-API

./: README.md  manage.py  requirements.in  requirements.txt  settings.ini  setup.cfg
apps/account/: apps.py
apps/account/admin/: __init__.py  token.py  user.py  user_agent.py
apps/account/api/: urls.py
apps/account/api/serializers/: __init__.py  auth.py  user.py
apps/account/api/views/: __init__.py  auth.py  user.py
apps/account/forms/: __init__.py  auth.py  user.py
apps/account/models/: __init__.py  token.py  user.py  user_agent.py
apps/account/repository/manager/: __init__.py  user.py  user_agent.py
apps/account/repository/queryset/: __init__.py  user.py  user_agent.py
docs/django/: References.md
kernel/: asgi.py  urls.py  wsgi.py
kernel/settings/: base.py  development.py  packages.py  production.py  secure.py
painless/: __init__.py  apps.py
painless/api/: exceptions.py
painless/factory/: __init__.py  factory.py
painless/helper/: enums.py
painless/middlewares/: ip_address.py
painless/models/: __init__.py  mixins.py
