[metadata]
name = Django RESTful API
author = Ali Shamsadini
author_email = ali.shamsadn@gmail.com
description = A comprehensive token-based authentication system using RESTful API.
long-description = README.md
classifiers =
    Environment :: Web
    Framework :: Django
    Operating System :: OS independent
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: Dynamic content
    Topic :: Internet :: WWW/HTTP :: WSGI
project-urls =
    Framework Documentation = https://docs.djangoproject.com/
    Django REST framework = https://www.django-rest-framework.org/
    Source = https://github.com/ali-shams/Django-RESTful-API/

[flake8]
max-line-length = 82
exclude =
    .git
    .gitignore
    .vscode
    .idea
    .env
    .venv
    env
    venv
    kernel/settings/*
    **/migrations/*
per-file-ignores =
    */__init__.py:F401
